corrected Alignment of heading

--- a/style.css
+++ b/style.css
@@ -7,6 +7,6 @@ body{
     min-height: 100vh;
     width: 100vw;
     display: flex;
-    align-items: center;
+    align-items: top;
     justify-content: center;
 }
